--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.5.2",
     "pg": "^4.3.0",
     "pg-hstore": "^2.3.2",
+    "request": "^2.55.0",
     "sequelize": "^2.0.6"
   }
 }
