--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg": "^4.3.0",
     "pg-hstore": "^2.3.2",
     "request": "^2.55.0",
-    "sequelize": "^2.0.6"
+    "sequelize": "^2.0.6",
+    "tts-speak": "^0.9.6"
   }
 }
