--- a/package.json
+++ b/package.json
@@ -19,13 +19,20 @@
   "dependencies": {
     "bcrypt": "^0.8.2",
     "body-parser": "^1.12.3",
+    "browserify-fs": "^1.0.0",
+    "events": "^1.0.2",
     "express": "^4.12.3",
     "express-session": "^1.11.1",
+    "fs-extra": "^0.18.2",
+    "g33k-logger": "^0.1.0",
+    "lodash": "^3.7.0",
     "morgan": "^1.5.2",
     "pg": "^4.3.0",
     "pg-hstore": "^2.3.2",
     "request": "^2.55.0",
     "sequelize": "^2.0.6",
-    "tts-speak": "^0.9.6"
+    "tts-speak": "^0.9.6",
+    "tts.js": "^0.1.0",
+    "util": "^0.10.3"
   }
 }
